Se esta aprendiendo a usar SingalR

--- a/WebApi_SingalR_Com/Pages/Index.cshtml
+++ b/WebApi_SingalR_Com/Pages/Index.cshtml
@@ -11,7 +11,6 @@
     {
         position: absolute;
         z-index: 9;
-        padding: 25px;
         background-color: #f1f1f1;
         border: 1px solid #d3d3d3;
         textAlign: center;
@@ -29,3 +28,5 @@
 
 </style>
 
+<script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+<script src="~/js/site.js"></script>
