Volvimos a una versio funcional.

--- a/WebApi_SingalR_Com/Pages/Index.cshtml
+++ b/WebApi_SingalR_Com/Pages/Index.cshtml
@@ -2,8 +2,8 @@
 
 <script>
     setInterval(function () {
-        UpdateHome();
-    }, 200);
+        siguienteTurno();
+    }, 1000);
 </script>
 
 <p id="v1"></p>
