--- a/WebApi_SingalR_Com/Pages/Index.cshtml
+++ b/WebApi_SingalR_Com/Pages/Index.cshtml
@@ -18,4 +18,5 @@
 </style>
 
 <script src="~/js/signalr.js"></script>
-<script src=~/js/HomeComunications.js></script>
+<!--<script src=~/js/HomeComunications.js></script> --> 
+<script src=~/js/EjemploComunications.js></script>
