--- a/WebApi_SingalR_Com/Pages/Index.cshtml
+++ b/WebApi_SingalR_Com/Pages/Index.cshtml
@@ -2,10 +2,10 @@
 
 <p id="v1">0</p>
 
-<p id="imagen1">x1</p>
-<p id="imagen2">x2</p>
-<p id="imagen3">x3</p>
-<p id="imagen4">x4</p>
+<pre id="imagen1">x1</pre>
+<pre id="imagen2">x1</pre>
+<pre id="imagen3">x1</pre>
+<pre id="imagen4">x1</pre>
 
 <script>
     setInterval(function () {
@@ -15,6 +15,7 @@
 
 <script>
     setInterval(function () {
+        console.log("hola");
         actualizarImagenes();
     }, 1000);
 </script>
