- ZONA SEGURA DEL PROYECTO --
Actualizacion:
 -Ahora los diferentes clientes pueden compartir imagenes!!!!!!!!!! Eso si deben pesar menos de 20kb;

--- a/WebApi_SingalR_Com/Pages/Index.cshtml
+++ b/WebApi_SingalR_Com/Pages/Index.cshtml
@@ -2,10 +2,11 @@
 
 <p id="v1">0</p>
 
-<pre id="imagen1">x1</pre>
-<pre id="imagen2">x1</pre>
-<pre id="imagen3">x1</pre>
-<pre id="imagen4">x1</pre>
+<p class="imagen" id="img1">x1</p>
+<p class="imagen" id="img2">x2</p>
+<p class="imagen" id="img3">x3</p>
+<p class="imagen" id="img4">x4</p>
+
 
 <script>
     setInterval(function () {
@@ -15,7 +16,6 @@
 
 <script>
     setInterval(function () {
-        console.log("hola");
         actualizarImagenes();
     }, 1000);
 </script>
