Se sigue avanzando en el desarrollo del juego.
Se cambio la perspectiva, ahora habra un unico hub en el home que comparta dentro del loop principal toda la informacion.

Comenzaron los desarrollos para dicho cambio.

--- a/WebApi_SingalR_Com/Pages/Index.cshtml
+++ b/WebApi_SingalR_Com/Pages/Index.cshtml
@@ -44,7 +44,5 @@
 
 <script src="~/js/signalr.js"></script>
 <script src=~/js/HomeComunications.js></script>
-<script src="~/js/signalr.js"></script>
 <script src="~/js/PasaTurnos.js"></script>
-
-<!--<script src=~/js/EjemploComunications.js></script>-->
+<script src=~/js/EjemploComunications.js></script>
