Se sigue avanzando en el desarrollo para lograr comunicar la jugada a todos los clientes.

--- a/WebApi_SingalR_Com/Pages/Index.cshtml
+++ b/WebApi_SingalR_Com/Pages/Index.cshtml
@@ -12,10 +12,10 @@
 <p>Turnero</p>
 
 <p id="Turnero">1</p>
-
-<p class="Keys" id="key">1</p>
-
-
+<p class="Keys" id="key1">1</p>
+<p class="Keys" id="key2">0</p>
+<p class="Keys" id="key3">0</p>
+<p class="Keys" id="key4">0</p>
 
 <script>
     setInterval(function () {
@@ -26,7 +26,7 @@
 <script>
     setInterval(function () {
         actualizarTurneros();
-    }, 1000);
+    }, 300);
 </script>
 
 <script>
