--- a/WebApi_SingalR_Com/Pages/Index.cshtml
+++ b/WebApi_SingalR_Com/Pages/Index.cshtml
@@ -11,11 +11,12 @@
 
 <p>Turnero</p>
 
-<p id="Turnero">1</p>
-<p class="Keys" id="key1">1</p>
-<p class="Keys" id="key2">0</p>
-<p class="Keys" id="key3">0</p>
-<p class="Keys" id="key4">0</p>
+<p id="TurnoActual">1</p>
+
+<p class="roles" id="key1">0</p>
+<p class="roles" id="key2">0</p>
+<p class="roles" id="key3">0</p>
+<p class="roles" id="key4">0</p>
 
 <script>
     setInterval(function () {
@@ -26,7 +27,7 @@
 <script>
     setInterval(function () {
         actualizarTurneros();
-    }, 300);
+    }, 500);
 </script>
 
 <script>
