Se sigue trabajando para arreglar el tema de los turnos.

--- a/WebApi_SingalR_Com/Pages/Index.cshtml
+++ b/WebApi_SingalR_Com/Pages/Index.cshtml
@@ -13,10 +13,7 @@
 
 <p id="TurnoActual">1</p>
 
-<p class="roles" id="key1">0</p>
-<p class="roles" id="key2">0</p>
-<p class="roles" id="key3">0</p>
-<p class="roles" id="key4">0</p>
+<p id="key">1</p>
 
 <script>
     setInterval(function () {
@@ -27,7 +24,7 @@
 <script>
     setInterval(function () {
         actualizarTurneros();
-    }, 500);
+    }, 1000);
 </script>
 
 <script>
