POTWIST, Ahora el juego tiene dos pestanias, cambiando asi su jugabilidad un 100% pero mejorando el aspecto visual a cambio.

--- a/WebApi_SingalR_Com/Pages/Index.cshtml
+++ b/WebApi_SingalR_Com/Pages/Index.cshtml
@@ -13,6 +13,7 @@
 <p class="voto" id="voto1">0</p>
 <p class="voto" id="voto2">0</p>
 <p class="voto" id="voto3">0</p>
+<p class="voto" id="voto4">0</p>
 
 <p>Turnero</p>
 <p id="TurnoActual">1</p>
